Add index page file upload, view, and link to Edit page for the file. Modify database query. Change sending authorization token from using Authorization header to sending with msg.
